<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">286567604853988</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">My Events</string>
    <string name="creador">Creador</string>
    <string name="lugar">Lugar</string>
    <string name="fecha">Fecha</string>
    <string name="fechaI">Fecha Inicio</string>
    <string name="fechaF">Fecha Fin</string>
    <string name="descripcion">Descripcion</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="likes">Likes</string>
    <string name="foto">Foto</string>
    <string name="activo">Activo</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="login">Inicia sesion con tu cuenta!</string>
    <string name="title_activity_init">My Events</string>
    <string name="user">usuario</string>
    <string name="password">contraseña</string>
    <string name="enter">Entrar</string>
    <string name="createUser">Crear cuenta</string>
    <string name="createEvent">Crear evento</string>
    <string name="searchEvent">Buscar evento</string>
    <string name="title_activity_my_events">MyEvents</string>
    <string name="userImageCab">Imagen del usuario</string>
    <string name="myEvents">Mis eventos</string>
    <string name="rest">Quedan 3 días</string>
    <string name="title_activity_create_event">MiEvents</string>
    <string name="hello_world">Hello world!</string>
    <string name="insertTitle">Introduce un título</string>
    <string name="insertDesc">Describe tu evento (max 150 caracteres)</string>
    <string name="insertAddress">Introduce una dirección</string>
    <string name="pick_date">Hora</string>
    <string name="hora">hh:mm</string>
    <string name="date">DD/MM/AAAA</string>
    <string name="showMap">Ver en mapa</string>
    <string name="title_activity_menu">MyEvents</string>
    <string name="search">Buscar</string>
    <string name="fav">Mis Favoritos</string>
    <string name="pref">Preferencias</string>
    <string name="newEvent">Nuevo</string>
    <string name="notif">Notificaciones</string>
    <string name="resetDates">Borrar fechas</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="darkBlue"> #1D5264</color>
    <color name="blue">  #26738c</color>
    <color name="gray">#BBC1C3</color>
    <color name="red">#FF0000</color>

    <string name="title_activity_pref">MyEvents</string>
    <string name="title_activity_search">MyEvents - Búsqueda</string>
    <string name="exit">Salir</string>
    <string name="logedUser">Usuario Logado:</string>
    <string name="title_activity_detail">MyEvents</string>
    <string name="price">Precio máx.</string>
    <string name="near">Eventos cerca de mi</string>
    <string name="tipo">Tipo de evento</string>
    <string name="register">Crear cuenta</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="registerText">Introduce tus datos</string>
    <string name="alias">Alias</string>
    <string name="mail">E-mail</string>
    <string name="msgMin5">El nombre debe tener como mínimo 5 caracteres.</string>
    <string name="msgEmpty">Por favor, rellena todos los campos.</string>
    <string name="msgServer">Conectando con el servidor</string>
    <string name="msgRegister">Registrando...</string>
    <string name="remember">¿Has olvidado tu contraseña?</string>
    <string name="euro">€</string>
    <string name="validateAddress">Validar dirección</string>
    <string name="addPhoto">Añadir una foto</string>
    <string name="validateAddressD">Valida la direccion para que los usuarios puedan localizarlo en un mapa.</string>
    <string name="topEvents">Ultimos Eventos!</string>
    <string name="ownEvents">Eventos creados por mí</string>
    <string name="title_activity_own_events">OwnEventsActivity</string>
    <string name="modify">Modificar</string>
    <string name="delete">Eliminar</string>
    <string name="title_activity_map">MapActivity</string>

</resources>