<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
		<EditText android:id="@+id/creador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/creador" />
		
		<EditText android:id="@+id/lugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lugar" />
		
		<EditText android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fecha" />
		
		<EditText android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion" />
		
		<EditText android:id="@+id/latitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/latitud" />
		
		<EditText android:id="@+id/longitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/longitud" />
		
		<EditText android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/likes" />
		
		<EditText android:id="@+id/foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/foto" />
		
		 <CheckBox android:id="@+id/activo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activo"
       />
		
		<Button android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:onClick="createEvent" />
	
</LinearLayout>