   
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:id="@+id/cab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:orientation="vertical">
    <LinearLayout 
          android:id="@+id/cab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:orientation="horizontal">

        <TextView
            android:id="@+id/userNameCab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
        <ImageView
            android:id="@+id/userPhotoCab"
            android:contentDescription="@string/userImageCab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/abc_spinner_ab_focused_holo_light" />

        <TextView
            android:id="@+id/myEventsCab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myEvents" />
  </LinearLayout>


<TableLayout 
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp" >

        <Button
            android:id="@+id/btnFav"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/fav" />

        <Button
            android:id="@+id/btnSearch"
   android:layout_height="120dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/search" 
             style="@style/Button"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/btnAdd"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/newEvent" />

        <Button
            android:id="@+id/btnPref"
    android:layout_height="120dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/pref" 
             style="@style/Button"/>
    </TableRow>

</TableLayout>
</LinearLayout>