<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.beat.myevents.Cabecera
        android:id="@+id/cabecera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.beat.myevents.Cabecera>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp" >

        <TextView
            android:id="@+id/textNotif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notif" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp" >
    
    <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logedUser" />
        <TextView
        android:id="@+id/logedUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logedUser"
        android:layout_marginLeft="5dp" 
        android:color="@color/gray"/>

    <Button
        android:id="@+id/button1"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit" 
        android:layout_marginLeft="10dp"/>
</LinearLayout>
</LinearLayout>